<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/tv_DateOfViewing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/date_of_viewing"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:alpha="0.5"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_Interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/interest"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_OfferPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/offer_price"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_OfferExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/offer_expiry_date"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_Conditions_Of_Offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/conditions_of_offer"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_ViewingComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/viewing_comments"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>