<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_Picture"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_Image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/property_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/lease_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_LeaseType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/bedrooms"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Bedrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/bathrooms"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Bathrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/size"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/asking_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_AskingPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/local_amenities"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_LocalAmenities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/floors"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Floors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_continue_with_these_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    app:backgroundTint="@android:color/holo_red_dark" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    app:backgroundTint="@android:color/holo_green_light"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</RelativeLayout>